<resources>
    <string name="app_name">Calculator</string>
    <string name="button_simple">Simple</string>
    <string name="button_advanced">Advanced</string>
    <string name="button_about">About</string>
    <string name="button_exit">Exit</string>
    <string name="ic_description_calculator_icon" translatable="false">Calculator Icon</string>
    <string name="author" translatable="false">Dawid Sadowski</string>
    <string name="app_icon_made_by">Icon made by:</string>
    <string name="app_icon_author" translatable="false"><a href="https://www.freepik.com">Freepik</a></string>
    <string name="error_zero_division">Don\'t divide by zero!</string>
    <string name="made_by">Made by:</string>
    <string name="incorrect_number_passed">Incorrect number passed!</string>
    <string name="limit_reached">Limit reached!</string>
</resources>